Fixed html alignment on mobile devices

--- a/static/m_fof_viewer.css
+++ b/static/m_fof_viewer.css
@@ -85,16 +85,22 @@ body {
 }
 
 #homeimg {
+    position:relative;
     margin-top: 0px;
     margin-left: 0px;
 }
 
-#fof_viewer_r3_c4 {
+#backImage, #frontImage {
     width: 100%;
     max-height: 100%;
     max-width: 100%;
     height: auto;
     width: auto;
+}
+
+#frontImageDiv, #backImageDiv {
+	width: 100%;
+	position: absolute;
 }
 
 /*** IE6 Fix ***/
